<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APT</string>
    <string name="curr_loc">Your Current Location!</string>
    <string name="hello_world">Hello world!</string>
    <string name="go">Go</string>
    <string name="Time">Set Time</string>
    <string name="Date">Set Date</string>
    <string name="action_settings">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="leave_after">Leave after</string>
    <string name="arrive_before">Arrive before</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>

    <!-- Key to access Google APIs -->
    <string name="API_KEY">AIzaSyCOA_RXGLEYFgJyKJjGhVDkIwfkIAr0diw</string>

    <string name="title_activity_routes">Routes</string>
    <string name="tr_walk">Walk</string>
    <string name="tr_bus">Bus</string>
    <string name="tr_tram">Tram</string>
    <string name="tr_metro">Metro</string>
    <string name="tr_train">Train</string>
    <string name="tr_boat">Boat</string>
    <string name="PREFS_NAME">RoutePreferences</string>
    <string name="title_activity_route_info_screen">APT</string>
    <string name="EditHintLocating">Locating...</string>
    <string name="Map">Map</string>
    <string name="Navigation">Start Navigation</string>
    <string name="allowLocTitle">Location consent</string>
    <string name="allowLocText">Allow sharing your current location while using public transport.</string>
    <string name="allowLocAgree">Agree</string>
    <string name="allowLocDisagree">Disagree</string>
    <string name="histName">Name</string>
    <string name="histAddress">Address</string>
    <string name="TabPlaces">Recent places</string>
    <string name="TabPlacesMenuFrom">Set as From</string>
    <string name="TabPlacesMenuTo">Set as To</string>
    <string name="TabPlacesMenuDelete">Delete</string>
    <string name="TabRoutes">Recent routes</string>
    <string name="TabRoutesMenuSet">Set</string>
    <string name="TabRoutesMenuSetBackwards">Set backwards</string>
    <string name="TabRoutesMenuDelete">Delete</string>
    <string name="Timer">APTTimer</string>
    <string name="home_page">Home</string>

    <!-- Notifications Strings -->
    <string name="DepartureText1">You need to start departure in less than %d minutes</string>
    <string name="RunningLateText">You need to walk faster</string>
    <string name="OffRouteText">You are walking off the route</string>
    <string name="DepartureText2">You need to start departure as soon as possible, you are %d minutes late!</string>
    <string name="DepartureText3">You are %d minutes late, please consider to change route!</string>
    <string name="DepartureTimer">Start departure</string>
    <string name="NotifyExit">Exit from %s</string>
    <string name="NotifyExitText">You need to exit on the next stop</string>
    <string name="NotifyNextStop">Following the timetable you should exit on the next stop, please adjust if you are not going on time</string>
    <string name="RouteDone">Route done!</string>
    <string name="busNotifyExitText">You need to exit on the next stop</string>
    <string name="busExitText">You need to exit the BUS in next %f meter(s)</string>
    <string name="RouteCancel">Route canceled</string>
    <string name="RouteFinish">Route finished</string>
    <string name="RouteFinishText">Your trip finished!</string>
    <string name="RouteStart">Route started</string>
    <string name="ArrivalText">Estimated time of arrival for your next transition point is %d minutes</string>
    <string name="NewRoutes">There are new Route available</string>

    <!-- Activity Titles -->
    <string name="title_activity_path_elevation">RouteInfo</string>
    <string name="title_activity_path_tracker">Information</string>
    <string name="title_activity_notification_updates">NotificationUpdates</string>
    <string name="title_activity_route_map">RouteMap</string>
    <string name="title_activity_manage_route">ManageRoute</string>
    <string name="title_section1">Route Information</string>
    <string name="title_section2">Places Of Interest</string>
    <string name="title_activity_route_details">RouteDetails</string>
    <string name="title_activity_route_info_fragment">RouteInfoFragment</string>
    <string name="title_activity_display_map">Map</string>
    <string name="title_activity_home_page">APT</string>
    <string name="title_activity_tourist_planner">TouristPlanner</string>
    <string name="title_activity_tourist_route">TouristRoute</string>
    <string name="title_activity_alternate_route">AlternateRoute</string>
    <string name="title_activity_route_info">RouteInfo</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="play_services_available">Google Play services is available</string>

    <!-- IP ADDRESS -->
    <string name="IP_ADDRESS">192.168.1.3</string>

    <string name="mCancelRoute">Stop Navigation</string>
    <string name="mClickOnBoard">Click the OnBoard Button once you are in the vehicle</string>
    <string name="mNotifyOnBoard">Notify APT when you board the vehicle</string>
    <string name="explore_city">Explore City</string>
    <string name="Places">Places</string>
    <string name="Explore">Explore</string>
    <string name="leave_at">Leave</string>
    <string name="Arrive_at">Arrive</string>
    <string name="SetTime">Set Time</string>

    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="distance_string">
        <item>500 m</item>
        <item>1 Km</item>
        <item>5 Km</item>
        <item>10 Km</item>
        <item>50 Km</item>
    </string-array>
    <string-array name="distance_value">
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
        <item>50000</item>
    </string-array>
    <string-array name="location_string">
        <item>Start</item>
        <item>End</item>
        <item>Tap on Screen</item>
    </string-array>

    <!-- Path Tracker Activity -->
    <string name="yes">Continue</string>
    <string name="no">Other Options</string>
    <string name="str_btn_Add">Add Place</string>
    <string name="duration">Duration</string>
    <string name="hnt_duration">in Minutes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Page -->
    <string name="journeyBtn">Journey Planner</string>
    <string name="touristBtn">Tourist Planner</string>
    <string name="hnt_et_keyword">Enter Keyword</string>
    <string name="str_within">within</string>
    <string name="str_of">Of</string>
    <string name="str_btn_search">Search</string>

    <drawable name="red">#C11B17</drawable>

    <string name="action_map">Map</string>
    <string name="title_activity_tourist_map">TouristMapActivity</string>
    <string name="title_activity_tourist_route_info">TouristRouteInfo</string>
    <string name="title_activity_web">WebActivity</string>

    <string name="action_navigation">Back to Current Route</string>

</resources>
