<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_vicinity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ViewFlipper>

    <TextView
        android:id="@+id/tv_photos_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hnt_duration"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_Add" />
    </LinearLayout>

</LinearLayout>