<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nancy.aucklandtransport.TouristPlanner">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:windowSoftInputMode="stateHidden">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/text_view1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <com.example.nancy.aucklandtransport.CustomAutoCompleteTextView
                        android:id="@+id/editText1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoText="true"
                        android:background="@drawable/rounded_edittext"
                        android:bufferType="normal"
                        android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Current Location"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/editText1"
                        android:nextFocusUp="@+id/editText1"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="" />

                    <Button
                        android:id="@+id/fromButton"
                        android:layout_width="50dip"
                        android:layout_height="wrap_content"
                        android:width="50dip"
                        android:drawableRight="@android:drawable/ic_dialog_map"
                        android:maxWidth="50dip"
                        android:onClick="showMapOfFromLoc"></Button>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="1dp"
                        android:text="@string/to" />

                    <com.example.nancy.aucklandtransport.CustomAutoCompleteTextView
                        android:id="@+id/editText2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoText="true"
                        android:background="@drawable/rounded_edittext"
                        android:bufferType="normal"
                        android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Address or Location"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="" />

                    <Button
                        android:id="@+id/toButton"
                        android:layout_width="50dip"
                        android:layout_height="wrap_content"
                        android:width="50dip"
                        android:drawableRight="@android:drawable/ic_dialog_map"
                        android:maxWidth="50dip"
                        android:onClick="showMapOfToLoc"></Button>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green"
                        android:drawableLeft="@android:drawable/ic_menu_search"
                        android:onClick="showRoute"
                        android:text="@string/Explore"></Button>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/leave_at"
                        android:layout_width="0dp"
                        android:layout_weight="0.125"
                        android:layout_height="wrap_content"
                        android:width="1dp"
                        android:text="@string/leave_at" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="0dp"
                        android:layout_weight="0.325"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@android:drawable/arrow_down_float"
                        android:onClick="showTimePickerDialog"
                        android:text="@string/Time"></Button>

                    <TextView
                        android:id="@+id/arrive_at"
                        android:layout_width="0dp"
                        android:layout_weight="0.125"
                        android:layout_height="wrap_content"
                        android:width="1dp"
                        android:text="@string/Arrive_at" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="0dp"
                        android:layout_weight="0.325"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@android:drawable/arrow_down_float"
                        android:onClick="showArriveTimeDialog"
                        android:text="@string/Time"></Button>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:drawableLeft="@android:drawable/arrow_down_float"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/Date"></Button>

            </LinearLayout>

            <TabHost
                android:id="@+id/TabHost01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ListView
                            android:id="@+id/myPlacesList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ListView
                            android:id="@+id/myRoutesList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
            </TabHost>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
